--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <img src="baner.png" alt="kursy komputerowe">
     </header>
     <nav>
-<div><a href="file:///C:/Users/Uczen09/Desktop/Polovko%20Daniel/Arkusze/ark1/index.html">Strona główna </a></div>
-        <div><a href="file:///C:/Users/Uczen09/Desktop/Polovko%20Daniel/Arkusze/ark1/raty.html">Koszt rat</a></div>
+<div><a href="index.html">Strona główna </a></div>
+        <div><a href="raty.html">Koszt rat</a></div>
         <div><a href="https://moje-szkolenia.pl/">Nasz partner</a></div>
     </nav>
     <main>
